# agentic-platform

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  pyproject.toml
src/agentic_platform/module_01_basics/: 01_hello_graph.py  02_state_and_nodes.py  03_edges_and_flow.py  README.md
src/agentic_platform/module_02_routing/: 01_conditional_edges.py  02_retry_loops.py  README.md
src/agentic_platform/module_03_tools/: 01_react_agent.py  README.md
src/agentic_platform/module_04_production/: 01_checkpointing.py  README.md
src/agentic_platform/research_agent/: checkpointer.py  graph.py  main.py  state.py
src/agentic_platform/research_agent/nodes/: __init__.py  formatter.py  planner.py  quality_check.py  researcher.py  synthesizer.py
src/agentic_platform/research_agent/tools/: __init__.py  arxiv_tool.py  calculator.py  search.py
tests/: conftest.py
tests/test_research_agent/: test_nodes.py  test_state.py
